# the-certain-news

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  docker-image.yml  docker-publish.yml  tests.yml
al_yaqeen/: __init__.py  apps.py  mixins.py  permissions.py  urls.py
al_yaqeen/ai/: __init__.py  apps.py  serializers.py  views.py
al_yaqeen/ai/scripts/: __init__.py  makerecs.py
al_yaqeen/ai/tests/: __init__.py  test_views.py
al_yaqeen/articles/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/articles/migrations/: 0001_initial.py  0002_initial.py
al_yaqeen/articles/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/categories/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/categories/migrations/: 0001_initial.py
al_yaqeen/categories/tests/: __init__.py  test_models.py  test_views.py  text_views.py
al_yaqeen/comments/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/comments/migrations/: 0001_initial.py  0002_initial.py
al_yaqeen/comments/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/followers/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/followers/migrations/: 0001_initial.py  0002_initial.py
al_yaqeen/followers/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/mixins/: __init__.py  models.py  views.py
al_yaqeen/reactions/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/reactions/migrations/: 0001_initial.py  0002_initial.py
al_yaqeen/reactions/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/reports/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/reports/migrations/: 0001_initial.py  0002_initial.py
al_yaqeen/reports/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/scripts/: __init__.py  export.py  load.py
al_yaqeen/tags/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/tags/migrations/: 0001_initial.py
al_yaqeen/tags/tests/: __init__.py  test_models.py  test_views.py
al_yaqeen/ui/: __init__.py  admin.py  apps.py  forms.py  mixins.py  urls.py  views.py
al_yaqeen/ui/cms/: __init__.py  apps.py  blocks.py  translations.py  wagtail_hooks.py
al_yaqeen/users/: __init__.py  apps.py  models.py  serializers.py  views.py
al_yaqeen/users/migrations/: 0001_initial.py  0002_user_saved.py
al_yaqeen/users/tests/: __init__.py  test_models.py
core/: __init__.py  asgi.py  settings.py  urls.py
tcn/: __init__.py  apps.py
tcn/api/: __init__.py  apps.py  fields.py  mixins.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
tcn/api/serializers/: __init__.py  comments.py  reactions.py  users.py
tcn/api/tests/: __init__.py  test_users_vs.py
tcn/api/viewsets/: __init__.py  articles.py  comments.py  reactions.py
tcn/apps/: __init__.py  mixins.py  signals.py
tcn/apps/articles/: __init__.py  apps.py  models.py
tcn/apps/blog/: __init__.py  apps.py  models.py
tcn/apps/categories/: __init__.py  apps.py  (+1 more)
tcn/channels/: __init__.py  apps.py  consumers.py  signals.py  urls.py
tcn/cms/: __init__.py  apps.py  blocks.py  translators.py  wagtail_hooks.py
tcn/ui/: __init__.py  admin.py  apps.py  forms.py  mixins.py  urls.py  views.py
(+248 files in other folders)
